# ops-narrator

./: .env.example  .gitignore  DEMO_RUNBOOK.md  LICENSE  POSITIONING_SLIDE.md  PROGRESS.md  README.md  SUBMISSION_CHECKLIST.md  agent.py  architecture_diagram.md  main.py  mint_token.py  ops-narrator-demo-spec-2.md  positioning_slide.html  pyproject.toml  test_agent.py  test_providers.py  test_tools.py  test_trace.py  test_webhook.py  tool-menu.md  tools.py  trace.py  validate_runs.py  viewer.html  webhook.py
briefs/: 20260524T200934Z-BSTOLL-L.json
prompts/: system.md  user_template.md
providers/: __init__.py  anthropic_client.py  base.py  google_client.py  openai_compat.py
splunk/: savedsearches.conf
traces/: trace-20260524-200934-BSTOLL-L.jsonl
