[project]
name = "ops-narrator"
version = "0.1.0"
description = "An AI SOC analyst that investigates a Splunk alert end to end and writes the incident brief."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.104.1",
    "fastapi>=0.136.1",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "mcp>=1.27.1",
    "openai>=1.60.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]
